tests-system/nested-packages-member-collision-enum/output
package foo.Level
        ^^^ nested-packages-member-collision-enum/foo_level.rsl:1: error: sub-package Level clashes with a type or object of the same name in package foo
Processed 2 models and 0 requirement files and found 1 error
